--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@
       href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     </head>
     <body>
-        <div class="card">
+        <div class="container">
+            <div class="card">
             <img src="myphoto.jpg"
              alt="Bejide Oluwatosin" class="profile-img">
              <h1>Bejide Oluwatosin</h1>
              <p class="title">Competent Web Developer</p>
              <p>Passionate in learning HTML & CSS</p>
+             </div>
+            <div class="card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCqs2NIxe22yFJ16csolh8erZLfO8nhVrL-w&s"
+                 alt="Another Skill">
+                 <h1>Graphic Designer</h1>
+                 <p>I love making beautiful things</p>
+            </div> 
+        </div>       
              <div class="social=links">
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
-             </div>
+              </div>  
              <div class="buttons">
                 <a href="#" class="btn">Contact</a>
                 <a href="#" class="btn">Portfolio</a>
              </div>
-        </div>
     </body>
 </html>
